# cryosnap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  publish-napi.yml
crates/cryosnap-cli/: Cargo.toml
crates/cryosnap-cli/configurations/: base.json  full.json
crates/cryosnap-cli/src/: args.rs  config.rs  interactive.rs  io.rs  main.rs  parse.rs  run.rs  test_utils.rs  tmux.rs
crates/cryosnap-cli/tests/: multi_output_avoids_rsvg.rs
crates/cryosnap-core/: Cargo.toml
crates/cryosnap-core/assets/: JetBrainsMono-OFL-1.1.txt
crates/cryosnap-core/src/: ansi.rs  config.rs  fonts.rs  input.rs  layout.rs  lib.rs  png.rs  render.rs  svg.rs  syntax.rs  text.rs  types.rs
crates/cryosnap-core/src/fonts/: cjk.rs  constants.rs  dirs.rs  download.rs  models.rs  plan.rs  scan.rs  system.rs
crates/cryosnap-core/src/tests/: mod.rs
crates/cryosnap-node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/cryosnap-node/src/: lib.rs
docs/plans/: 2026-02-19-render-performance-optimization-design.md  2026-02-19-render-performance-optimization.md
scripts/: release-hook.sh
