[package]
name = "cryosnap-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core rendering library for cryosnap."
repository = "https://github.com/Wangnov/cryosnap"
homepage = "https://github.com/Wangnov/cryosnap"
documentation = "https://docs.rs/cryosnap-core"
readme = "../../README.md"
keywords = ["rendering", "svg", "png", "terminal", "screenshot"]
categories = ["graphics", "multimedia::images"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
portable-pty = "0.9.0"
shell-words = "1.1"
syntect = { version = "5.3.0", default-features = true, features = ["default-fancy"] }
terminal_size = "0.4.3"
unicode-width = "0.2.2"
vte = "0.15.0"
resvg = "0.46.0"
usvg = "0.46.0"
tiny-skia = "0.11.4"
base64 = "0.22.1"
webp = "0.3.1"
oxipng = { version = "10.1.0", default-features = false, features = ["parallel"] }
once_cell = "1.19.0"
imagequant = "4.4.1"
png = "0.18.0"
